# fast_blog_api

./: .gitignore  alembic.ini  main.py  pyproject.toml
db/: database.py
db/models/: post_model.py  users_model.py
decorators/auth/: authorizations.py
routes/: auth.py  users.py
routes/admin/: admin.py
schemas/: users.py
schemas/admin/: category_schema.py  country_schema.py  language_schema.py  user_role_schema.py
serices/: auth.py  auth_services.py  users_services.py
serices/admin/: category_services.py  country_services.py  language_services.py  user_role_services.py
utils/: helper.py
